--- a/tasklist/index.html
+++ b/tasklist/index.html
@@ -31,7 +31,9 @@
               <input type="text" name="filter" id="filter">
               <label for="filter">Filter Tasks</label>
             </div>
-            <ul class="collection"></ul>
+            <ul class="collection">
+
+            </ul>
             <a href="#" class="clear-tasks btn black">Clear Tasks</a>
           </div>
         </div>
